--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -128,21 +128,21 @@ span{
     font-size: 12px;
 }
 
-
-main button {
-    background-color: #414141;
-    padding: 10px 5px 10px 5px;
-    border: solid #AD9863 1px;
-    border-radius: 4px;
-    color: white;
-    letter-spacing: 1px;
+.boton-agregar {width: 20vh;
+    margin-bottom: 3vh;
+    border-radius: 6px;
+    border: none;
+    background-color: #383D41;
+    color: #ebebeb ;
+    height: 1.5em;
+    transition: all 0.2s;
 }
 
-main button:hover {
+.boton-agregar:hover {
     box-shadow:0px 0px 10px #AD9863;
 }
 
-main button:focus {
+.boton-agregar:focus {
     background-color: #AD9863;
     color: #383D41;
     font-weight: bold;
