ajustes css header, create, list y varios retoques

--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -47,7 +47,8 @@ img {
 
 .formsearch {
     position: relative;
-    display:flex;  
+    display:flex;    
+    border-radius: 50px; 
 }
 
 .formsearch input {
