--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -110,7 +110,10 @@ span{
 .vinos img {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    max-width: 263px
+    max-height: 300px;
+    min-height: 299.99px;
+    max-width: 263px;
+    min-width: 262.99px;
 }
 
 .imagen-producto {
