--- a/public/css/products/detail.css
+++ b/public/css/products/detail.css
@@ -16,8 +16,8 @@ main {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    max-height:100%;
+    max-width:100%;
 }
 
 h2 {
@@ -36,13 +36,16 @@ h2 {
     z-index: 0;
     
 }
-.imagen-producto{
-    padding-top: 10px;
+.imagen-producto img{
+    max-height: 425px;
+    min-height: 299.99px;
+    max-width: 380px;
+    min-width: 262.99px;
+    margin: 15% 0;
 }
 
-.caja-texto-principal {
-    display: flex;
-    text-align: left;
+.caja-textos-principal {
+    width: 90%;
 }
 .producto-nombre {
     text-align: left;
@@ -221,10 +224,7 @@ h2 {
     }
     .caja-textos-principal {
         width: 66%;
-        padding-top: 5%;
-            }
-    .imagen-producto{
-        padding-top: 5%;       
+        padding: 5% 5% 0 0;
     }
 
     .precio{
