--- a/src/views/products/create.ejs
+++ b/src/views/products/create.ejs
@@ -18,17 +18,15 @@
                 <input type="text" name="varietal" id="varietal" placeholder="Varietal">
         </fieldset>
         <fieldset>     
-            <select name="tipoVino">
+            <label for="tipoVino">Tipo de Vino</label>
+            <select class="selector" name="tipoVino">                
                     <option value="NULL">Vacio</option>
                 <% if (tipo_vino.length > 0) { %>
                     <% tipo_vino.forEach(product => { %>
                     <option value="<%= product.id%>"><%= product.name%></option> 
                     <% }) %> 
                 <% } %> 
-             </select>   
-            <!-- <label for="tipoVino">Tipo de Vino</label>
-                <input type="text" name="tipoVino" id="tipoVino" placeholder="Tipo de vino"> -->
-            
+             </select>  
         </fieldset>
         <fieldset>    
             <label for="bodega">Bodega</label>
