TABLAS NUEVAS, RELACIONES, CATALOGO:ID

--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -52,7 +52,7 @@
             <% products.forEach(product => { %>
                 <article class="vinos">
                 <!-- <li class="product"> -->
-                    <a href="/products/<%= product.id %> " class="titulo-producto">  
+                    <a href="/catalogo/<%= product.id %> " class="titulo-producto">  
                         
                         <% if (product.image) { %>
                                 <img class="imagen-profile" src="/uploads/products/<%= product.image %>" alt="" srcset="">                                
