--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -16,7 +16,7 @@
                 <article class="producto-datos">
                   <p><b>AÑO DE COSECHA:</b> <%= product.anno %></p>  
                   <p><b>VARIEDADES:</b> <%= product.varietal %></p>
-                  <p><b>TIPO:</b> <%= product.tipoVino %></p>
+                  <p><b>TIPO:</b><%= product.tipoVino1 %></p>
                 </article>
   
                 <h4 class="titulo-maridaje-cata">NOTAS DE CATA</h4>
