--- a/src/views/products/create.ejs
+++ b/src/views/products/create.ejs
@@ -14,6 +14,7 @@
                 <input type="number" name="anno" id="anno" placeholder="Año de cosecha">
         </fieldset>    
         <fieldset>
+            <label for="tipoVino">Varietal</label>
             <select class="selector" name="varietal">
                 <option value="NULL">Vacio</option>
             <% if (varietales.length > 0) { %>
@@ -21,31 +22,21 @@
                 <option value="<%= product.id%>"><%= product.name%></option> 
                 <% }) %> 
             <% } %> 
-         </select>
+            </select>
         </fieldset>
         <fieldset>     
-<<<<<<< HEAD
-            <select class="selector" name="tipoVino">
-=======
             <label for="tipoVino">Tipo de Vino</label>
             <select class="selector" name="tipoVino">                
->>>>>>> 62d0b2f663c17b8adf9cf9fab64af670f32f0e81
                     <option value="NULL">Vacio</option>
                 <% if (tipo_vino.length > 0) { %>
                     <% tipo_vino.forEach(product => { %>
                     <option value="<%= product.id%>"><%= product.name%></option> 
                     <% }) %> 
                 <% } %> 
-<<<<<<< HEAD
-             </select>   
-            <!-- <label for="tipoVino">Tipo de Vino</label>
-                <input type="text" name="tipoVino" id="tipoVino" placeholder="Tipo de vino"> -->
-             
-=======
              </select>  
->>>>>>> 62d0b2f663c17b8adf9cf9fab64af670f32f0e81
         </fieldset>
-        <fieldset>    
+        <fieldset>
+            <label for="tipoVino">Bodega</label>   
             <select class="selector" name="bodega">
                 <option value="NULL">Vacio</option>
             <% if (bodegas.length > 0) { %>
