--- a/src/views/vino.ejs
+++ b/src/views/vino.ejs
@@ -11,29 +11,28 @@
             </picture>
        
             <article class="caja-textos-principal">
-             <h3 class="producto-nombre">ANTOLOGIA</h3>
+             <h3 class="producto-nombre"><%= product.price %></h3>
              <article class="producto-datos">
-                 <p><b>AÑO DE COSECHA:</b> Abril 2015</p>  
-                <p><b>VARIEDADES:</b>93% Malbec de Gualtallary, 7% Petit Verdot.</p>
-                <p><b>TIPO:</b> Manual</p>
+                <p><b>AÑO DE COSECHA:</b> <%= product.anno %></p>  
+                <p><b>VARIEDADES:</b> <%= product.varietal %></p>
+                <p><b>TIPO:</b><%= product.tipoVino1 %></p>
             </article>
 
              <h4 class="titulo-maridaje-cata">NOTAS DE CATA</h4>
 
              <article class="producto-cata"> 
-                 <p>Amarillo dorado, con brillantes reflejos verdosos. Muy aromatico,en la nariz se perciben aromas exuberantes a melon fresco y durazno blanco, combinados con notas de fruta tropicalm , que aparecen acompañadas por vahos citricos y florales. Su entrada en boca -levemente dulce-  es equilibrada debido a su exhaustiva crianza.
-                Blanco armonioso , distinguido, reitera la cremosidad que el roble cede a la uva dominante (Chardonnay), en su amplio volumen y en la acidez refrescante del final de boca.</p>
+                <p><%= product.notasCata %></p>
             </article> 
 
              <h4 class="titulo-maridaje-cata">MARIDAJE</h4>
 
              <article class="producto-maridaje"> 
-                Jamon crudo, assiette anglaise ( plato de fiambres ) , esparragos blancos , consome de ostras frescas , ranas a la provenzal , sopas marineras ( Bouillabaisse), pescados del mar (merluza austral, abadejo , lenguado, chernia), hojaldre de atun , crustaceos y mariscos (langostinos, vieiras, langosta, centolla fueguina), risotto milanes, omelette de hongos frescos, aves en salsa de crema , pavo y pavita horneados, fondeu suiza , quesos frescos, de alto tenor graso, quesos semiduros picantes ( gruyere , manchego , criollo argentino ).
+                <p><%= product.maridaje %></p>
              </article>    
 
              <article class="agregar-producto">
-              <b class="nombre-producto-bottom">Antologia</b>
-              <p class="precio">$8.000</p>
+              <b class="nombre-producto-bottom"><%= product.name %></b>
+              <p class="precio">$<%= product.price %></p>
               <p class="seleccionar"><i>Seleccione Cantidad:</i></p>
               <div class="cantidades">
                   <p class="mas-menos">-</p>
@@ -52,17 +51,6 @@
 
 
         </section> 
-
-
-
-
-
-
-
-
-
-
-
 
 
     </main>
