--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -9,28 +9,34 @@
             <fieldset class="fs-nombre">
                 <label for="nombre">Nombre</label>
                 <input name="nombre" type="text" id="nombre" placeholder="Ingrese su nombre completo">
+                <% if (locals.errors && errors.nombre) { %>
+                    <p class="errores"><%= errors.nombre.msg %> </p>
+                <% } %>
             </fieldset>
             <fieldset class="fs-apellido">
                 <label for="apellido">Apellido</label>
                 <input name="apellido" type="text" id="apellido" placeholder="Ingrese su apellido">
+                <% if (locals.errors && errors.apellido) { %>
+                    <p class="errores"><%= errors.apellido.msg %> </p>
+                <% } %>
             </fieldset>
             <fieldset class="fs-e-mail-reg">
                 <label for="email">Correo Electronico</label>
                 <input type="text" name="email" id="email" placeholder="Direccion de Email">
                 <% if (locals.errors && errors.email) { %>
-                    <p><%= errors.email.msg %> </p>
+                    <p class="errores"><%= errors.email.msg %> </p>
                 <% } %>
             </fieldset>
             <fieldset class="fs-pass-reg">
                 <label for="password">Contraseña</label>
                 <input name="password" type="password" id="password" placeholder="***********">
+                <% if (locals.errors && errors.password) { %>
+                    <p class="errores"><%= errors.password.msg %> </p>
+                <% } %>
             </fieldset>
             <fieldset class="fs-pass-reg2">
                 <label for="pass-reg2">Confirmar Contraseña</label>
                 <input type="password" id="pass-reg2" placeholder="Confirmar">
-                <% if (locals.errors && errors.password) { %>
-                    <p><%= errors.password.msg %> </p>
-                <% } %>
             </fieldset>
             <label class="boton-imagen" for="file">
                 <input type="file" name="file" id="file" multiple>
