--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -8,21 +8,24 @@
             <h2>Registro</h2>
             <fieldset class="fs-nombre">
                 <label for="nombre">Nombre</label>
-                <input name="nombre" type="text" id="nombre" placeholder="Ingrese su nombre completo">
+                <input name="nombre" type="text" id="nombre" placeholder="Ingrese su nombre completo" 
+                       value= "<%= locals.oldData ? oldData.nombre : null %>">
                 <% if (locals.errors && errors.nombre) { %>
                     <p class="errores"><%= errors.nombre.msg %> </p>
                 <% } %>
             </fieldset>
             <fieldset class="fs-apellido">
                 <label for="apellido">Apellido</label>
-                <input name="apellido" type="text" id="apellido" placeholder="Ingrese su apellido">
+                <input name="apellido" type="text" id="apellido" placeholder="Ingrese su apellido"
+                       value= "<%= locals.oldData ? oldData.apellido : null %>">
                 <% if (locals.errors && errors.apellido) { %>
                     <p class="errores"><%= errors.apellido.msg %> </p>
                 <% } %>
             </fieldset>
             <fieldset class="fs-e-mail-reg">
                 <label for="email">Correo Electronico</label>
-                <input type="text" name="email" id="email" placeholder="Direccion de Email">
+                <input type="text" name="email" id="email" placeholder="Direccion de Email"
+                       value= "<%= locals.oldData ? oldData.email : null %>">
                 <% if (locals.errors && errors.email) { %>
                     <p class="errores"><%= errors.email.msg %> </p>
                 <% } %>
