--- a/src/views/vino.ejs
+++ b/src/views/vino.ejs
@@ -15,9 +15,10 @@
             <article class="caja-textos-principal">
              <h3 class="producto-nombre"><%= product.price %></h3>
              <article class="producto-datos">
-                <p><b>AÑO DE COSECHA:</b> <%= product.anno %></p>  
-                <p><b>VARIEDADES:</b> <%= product.varietal %></p>
-                <p><b>TIPO:</b><%= product.tipoVino1 %></p>
+                <p><b>AÑO DE COSECHA: </b> <%= product.anno %></p>  
+                <p><b>VARIEDADES: </b> <%= product['tipoVarietal'].name %></p>
+                <p><b>TIPO: </b><%= product['tipoVino1'].name %></p>
+                <p><b>BODEGA: </b><%= product['tipoBodega'].name %></p>
             </article>
 
              <h4 class="titulo-maridaje-cata">NOTAS DE CATA</h4>
