estructura db y prueba script

--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -53,7 +53,7 @@
                 <a href="http://facebook.com" target="_blank"><img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb"></a>
             </section>
         </form>
-
+        <script src="/js/register.js"></script>
 
 
     </main>
