--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -16,7 +16,8 @@
                 <article class="producto-datos">
                   <p><b>AÑO DE COSECHA:</b> <%= product.anno %></p>  
                   <p><b>VARIEDADES:</b> <%= product['tipoVarietal'].name %></p>
-                  <p><b>TIPO:</b><%= product['tipoVino1'].name %></p>
+                  <p><b>TIPO:</b> <%= product['tipoVino1'].name %></p>
+                  <p><b>BODEGA: </b><%= product['tipoBodega'].name %></p>
                 </article>
   
                 <h4 class="titulo-maridaje-cata">NOTAS DE CATA</h4>
