--- a/public/css/products/update.css
+++ b/public/css/products/update.css
@@ -31,7 +31,7 @@ form {
 
 main form {
     display: flex;
-    width: 70%; 
+    width: 100%; 
     margin: 3%;
     border: solid #AD9863 1px;
     border-radius: 4px;
@@ -130,7 +130,20 @@ section {
     justify-content: flex-start;
     padding-top: 5px;
 }
+.selector {
+    width: 90%;
+    background-color: #ebebeb;
+    background-color: #F4F4F4;
+    box-shadow: 0px 0px 1px 1px #A9AAAA;
+    border: 0;
+    margin: 1px;
+    padding: 5px 0px;
+    color: #383D41;
+}
 
+.selector:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
 
 
 
