--- a/public/css/register.css
+++ b/public/css/register.css
@@ -143,10 +143,22 @@ fieldset label{
     display: flex;
 }
 
-.errores {
+p.errores {
     color: red;
     margin-top: 5px;
     font-size: 15px;
+}
+
+input.errores {
+    box-shadow: 0px 0px 1px 1px #f04747bb;
+}
+
+input.errores:hover {
+    box-shadow:0px 0px 10px #f04747bb;
+}
+
+.display-errores {
+    display: none;
 }
 
 @media (min-width: 768px) {  /*TABLET*/
